Subida de Desafío Entregable 7

--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "sass",
+  "name": "desafio7",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build-css": "node-sass --include-path scss scss/main.scss css/main.css",
+    "test": "echo \"Error: no test specified\" && exit 1", "build-css": "node-sass --include-path scss scss/main.scss css/main.css",
 		"watch-css": "nodemon -e scss -x \"npm     run build-css\""
   },
-  "author": "Lourdes Landoni",
+  "author": "",
   "license": "ISC",
   "devDependencies": {
     "node-sass": "^7.0.1",
